--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <header class="header" id="header">
         <img
           class="header__img"
-          src="<%=require('./image/Header/forHeader2.jpg')%>"
+          src="<%=require('./images/forHeader2.jpg')%>"
           alt="Обложка"
         />
         <div class="header__container">
@@ -44,7 +44,7 @@
         <section class="info" id="info">
           <img
             class="info__marks"
-            src="<%=require('./image/Info/marks.svg')%>"
+            src="<%=require('./images/marks.svg')%>"
             alt="Кавычки"
           />
           <div class="info__container">
@@ -106,17 +106,17 @@
               allowfullscreen
             ></iframe>
             <img
-              src="<%=require('./image/Info/Instagram__post1.png')%>"
+              src="<%=require('./images/Instagram__post1.png')%>"
               alt="Счастливые» семьи"
               class="info__post"
             />
             <img
-              src="<%=require('./image/Info/Instagram__post2.png')%>"
+              src="<%=require('./images/Instagram__post2.png')%>"
               alt="Родительские манипуляции"
               class="info__post"
             />
             <img
-              src="<%=require('./image/Info/Instagram__post3.png')%>"
+              src="<%=require('./images/Instagram__post3.png')%>"
               alt="Выход из созависимости"
               class="info__post"
             />
@@ -127,12 +127,12 @@
               href="https://www.instagram.com/irdan_psy/"
               target="_blank"
               ><img
-                src="<%=require('./image/Social-icon/Instagram_64px.png')%>"
+                src="<%=require('./images/Instagram_64px.png')%>"
                 alt="Instagram"
             /></a>
             <a class="info__icon" href="https://t.me/irdan_psy/" target="_blank"
               ><img
-                src="<%=require('./image/Social-icon/Telegram_64px.png')%>"
+                src="<%=require('./images/Telegram_64px.png')%>"
                 alt="Telegram"
             /></a>
             <a
@@ -140,7 +140,7 @@
               href="https://www.facebook.com/psy.academician/"
               target="_blank"
               ><img
-                src="<%=require('./image/Social-icon/facebook_64px.png')%>"
+                src="<%=require('./images/facebook_64px.png')%>"
                 alt="Facebook"
             /></a>
             <a
@@ -148,7 +148,7 @@
               href="https://vt.tiktok.com/ZSdyPUQHV/"
               target="_blank"
               ><img
-                src="<%=require('./image/Social-icon/tikTok_64px.png')%>"
+                src="<%=require('./images/tikTok_64px.png')%>"
                 alt="Tik-Tok"
             /></a>
             <a
@@ -156,7 +156,7 @@
               href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
               target="_blank"
               ><img
-                src="<%=require('./image/Social-icon/YouTube_64px.png')%>"
+                src="<%=require('./images/YouTube_64px.png')%>"
                 alt="YouTube"
             /></a>
           </nav>
@@ -171,7 +171,7 @@
               реабилитацию
             </p>
             <img
-              src="<%=require('./image/Situations/situations_1.png')%>"
+              src="<%=require('./images/situations_1.png')%>"
               alt="Головной мозг иконки от Smashicons - Flaticon"
               class="situations__icon"
             />
@@ -184,7 +184,7 @@
               Сепарация от родителей, отстаивание своих психологических границ
             </p>
             <img
-              src="<%=require('./image/Situations/situations_2.png')%>"
+              src="<%=require('./images/situations_2.png')%>"
               alt="Иконка от Freepik - Flaticon"
               class="situations__icon"
             />
@@ -195,7 +195,7 @@
               Созависимость, семейные кризисы, угасание чувств
             </p>
             <img
-              src="<%=require('./image/Situations/situations_3.png')%>"
+              src="<%=require('./images/situations_3.png')%>"
               alt="Иконка от justicon - Flaticon"
               class="situations__icon"
             />
@@ -207,7 +207,7 @@
               в семье
             </p>
             <img
-              src="<%=require('./image/Situations/situations_4.png')%>"
+              src="<%=require('./images/situations_4.png')%>"
               alt="Иконка от Freepik - Flaticon"
               class="situations__icon"
             />
@@ -219,7 +219,7 @@
               Полюбить себя. Жить в удовольствие
             </p>
             <img
-              src="<%=require('./image/Situations/situations_5.png)%>"
+              src="<%=require('./images/situations_5.png)%>"
               alt="Иконка от Freepik - Flaticon"
               class="situations__icon"
             />
@@ -231,7 +231,7 @@
               вперед
             </p>
             <img
-              src="<%=require('s/image/Situations/situations_6.png)%>"
+              src="<%=require('s/images/situations_6.png)%>"
               alt="Иконка от Freepik - Flaticon"
               class="situations__icon"
             />
@@ -316,154 +316,154 @@
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education1.jpg')%>"
+                  src="<%=require('./images/education1.jpg')%>"
                   alt="Диплом № 1"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education2.jpg')%>"
+                  src="<%=require('./images/education2.jpg')%>"
                   alt="Диплом № 2"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education3.jpg')%>"
+                  src="<%=require('./images/education3.jpg')%>"
                   alt="Диплом № 3"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education4.jpg')%>"
+                  src="<%=require('./images/education4.jpg')%>"
                   alt="Диплом № 4"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education5.jpg')%>"
+                  src="<%=require('./images/education5.jpg')%>"
                   alt="Диплом № 5"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education6.jpg')%>"
+                  src="<%=require('./images/education6.jpg')%>"
                   alt="Диплом № 6"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education7.jpg')%>"
+                  src="<%=require('./images/education7.jpg')%>"
                   alt="Диплом № 7"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education8.jpg')%>"
+                  src="<%=require('./images/education8.jpg')%>"
                   alt="Диплом № 8"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education9.jpg')%>"
+                  src="<%=require('./images/education9.jpg')%>"
                   alt="Диплом № 9"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education10.jpg')%>"
+                  src="<%=require('./images/education10.jpg')%>"
                   alt="Диплом № 10"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education11.jpg')%>"
+                  src="<%=require('./images/education11.jpg')%>"
                   alt="Диплом № 11"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education12.jpg')%>"
+                  src="<%=require('./images/education12.jpg')%>"
                   alt="Диплом № 12"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education13.png')%>"
+                  src="<%=require('./images/education13.png')%>"
                   alt="Диплом № 13"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education14.png')%>"
+                  src="<%=require('./images/education14.png')%>"
                   alt="Диплом № 14"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education15.png')%>"
+                  src="<%=require('./images/education15.png')%>"
                   alt="Диплом № 15"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education16.jpg')%>"
+                  src="<%=require('./images/education16.jpg')%>"
                   alt="Диплом № 16"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education17.jpg')%>"
+                  src="<%=require('./images/education17.jpg')%>"
                   alt="Диплом № 17"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education18.jpg')%>"
+                  src="<%=require('./images/education18.jpg')%>"
                   alt="Диплом № 18"
                 />
               </div>
               <div class="swiper-slide swiper-slide-size">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education19.jpg')%>"
+                  src="<%=require('./images/education19.jpg')%>"
                   alt="Диплом № 19"
                 />
               </div>
               <div class="swiper-slide swiper-slide-size">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education20.jpg')%>"
+                  src="<%=require('./images/education20.jpg')%>"
                   alt="Диплом № 20"
                 />
               </div>
               <div class="swiper-slide swiper-slide-size">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education21.jpg')%>"
+                  src="<%=require('./images/education21.jpg')%>"
                   alt="Диплом № 21"
                 />
               </div>
               <div class="swiper-slide swiper-slide-size">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Educations/education22.jpg')%>"
+                  src="<%=require('./images/education22.jpg')%>"
                   alt="Диплом № 22"
                 />
               </div>
@@ -483,98 +483,98 @@
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review1.jpg')%>"
+                  src="<%=require('./images/review1.jpg')%>"
                   alt="Отзыв № 1"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review2.jpg')%>"
+                  src="<%=require('./images/review2.jpg')%>"
                   alt="Отзыв № 2"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review3.jpg')%>"
+                  src="<%=require('./images/review3.jpg')%>"
                   alt="Отзыв № 3"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review4.jpg')%>"
+                  src="<%=require('./images/review4.jpg')%>"
                   alt="Отзыв № 4"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review5.jpg')%>"
+                  src="<%=require('./images/review5.jpg')%>"
                   alt="Отзыв № 5"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review8.jpg')%>"
+                  src="<%=require('./images/review8.jpg')%>"
                   alt="Отзыв № 8"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review9.jpg')%>"
+                  src="<%=require('./images/review9.jpg')%>"
                   alt="Отзыв № 9"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review10.jpg')%>"
+                  src="<%=require('./images/review10.jpg')%>"
                   alt="Отзыв № 10"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review11.jpg')%>"
+                  src="<%=require('./images/review11.jpg')%>"
                   alt="Отзыв № 11"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review12.jpg')%>"
+                  src="<%=require('./images/review12.jpg')%>"
                   alt="Отзыв № 12"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review13.jpg')%>"
+                  src="<%=require('./images/review13.jpg')%>"
                   alt="Отзыв № 13"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review14.jpg')%>"
+                  src="<%=require('./images/review14.jpg')%>"
                   alt="Отзыв № 14"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review16.jpg')%>"
+                  src="<%=require('./images/review16.jpg')%>"
                   alt="Отзыв № 16"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   class="education__diploms-item"
-                  src="<%=require('./image/Rewiews/review17.jpg')%>"
+                  src="<%=require('./images/review17.jpg')%>"
                   alt="Отзыв № 17"
                 />
               </div>
@@ -631,7 +631,7 @@
             href="https://www.instagram.com/irdan_psy/"
             target="_blank"
             ><img
-              src="<%=require('./image/Social-icon/Instagram_32px.png')%>"
+              src="<%=require('./images/Instagram_32px.png')%>"
               alt="Instagram"
           /></a>
           <a
@@ -639,24 +639,20 @@
             href="https://www.facebook.com/psy.academician/"
             target="_blank"
             ><img
-              src="<%=require('./image/Social-icon/facebook_32px.png')%>"
+              src="<%=require('./images/facebook_32px.png')%>"
               alt="Facebook"
           /></a>
           <a
             class="footer__icon"
             href="https://vt.tiktok.com/ZSdyPUQHV/"
             target="_blank"
-            ><img
-              src="<%=require('./image/Social-icon/tikTok_32px.png')%>"
-              alt="Tik-Tok"
+            ><img src="<%=require('./images/tikTok_32px.png')%>" alt="Tik-Tok"
           /></a>
           <a
             class="footer__icon"
             href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
             target="_blank"
-            ><img
-              src="<%=require('./image/Social-icon/YouTube_32px.png')%>"
-              alt="YouTube"
+            ><img src="<%=require('./images/YouTube_32px.png')%>" alt="YouTube"
           /></a>
         </nav>
       </footer>
