--- a/src/index.html
+++ b/src/index.html
@@ -20,33 +20,42 @@
             </label>
             <ul class="menu header__nav">
               <li>
-                <a class="nav__link header__link" href="#header">Главная</a>
+                <a class="nav__link header__link" href="#header"
+                  >Главная <br />
+                  страница</a
+                >
               </li>
               <li>
-                <a class="nav__link header__link" href="#info">Обо мне</a>
+                <a class="nav__link header__link" href="#info"
+                  >Работа<br />
+                  психолога</a
+                >
               </li>
               <li>
                 <a class="nav__link header__link" href="#situations"
-                  >Направления</a
+                  >Психологическая<br />
+                  помощь</a
                 >
               </li>
               <li>
                 <a class="nav__link header__link" href="#consultation"
-                  >Консультации</a
+                  >Психологические<br />
+                  консультации</a
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="#footer">Контакты</a>
+                <a class="nav__link header__link" href="#footer"
+                  >Мои<br />
+                  контакты</a
+                >
               </li>
             </ul>
           </section>
           <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
             >Записаться на консультацию
           </a>
-          <h1 class="header__title">
-            Ирина Дан Психолог <br />
-            С заботой о вашем психологическом благополучии
-          </h1>
+          <h1 class="header__title">Психолог Ирина Дан</h1>
+          <p class="header__subtitle">Помогаю изменить жизнь к лучшему</p>
         </div>
       </header>
       <main>
@@ -54,49 +63,49 @@
           <img class="info__marks" src="./images/marks.svg" alt="Кавычки" />
           <div class="info__container">
             <p class="info__text">
-              Приветствую Вас на моём сайте! Меня зовут Ирина Дан.
+              Приветствую вас на моём сайте! Меня зовут Ирина Дан.
             </p>
             <p class="info__text">
-              Я практикующий психолог, работаю в интегративном подходе и
-              специализируюсь в когнитивно-поведенческой психотерапии.
+              Я профессиональный психолог. Работаю в интегративном подходе и
+              специализируюсь <br />
+              в когнитивно-поведенческой психотерапии третьей волны.
             </p>
             <p class="info__text">
-              Я помогу вам разобраться в проблемах связанных с кризисами и
-              непониманием в личных отношениях в парах, с пожилыми родителями,
-              детьми и подростками.
+              Я помогу вам в решении проблем, связанных с кризисами и
+              конфликтами в любовных и дружеских отношениях, общении с пожилыми
+              родителями, детьми и подростками.
             </p>
             <p class="info__text">
-              А так же апатией, тревожностью, паническими атаками, депрессивными
-              состояниями.
+              А так же если у вас наблюдается апатия, тревожность, панические
+              атаки, депрессия.
             </p>
             <p class="info__text">
-              Если Вы зашли на мой сайт, значит у вас возникла мысль обратиться
-              к психологу.
+              Если вы зашли на мой сайт, значит у вас возникла мысль обратиться
+              за психологической помощью.
             </p>
-            <p class="info__text">
+            <p class="info__text info__test_margin">
               Навалился груз проблем и не знаете, как справляться?
             </p>
             <p class="info__text">
-              Не откладывайте. Не ждите, когда этот ком Вас накроет!
+              Не откладывайте. Не ждите, когда этот ком вас накроет!
             </p>
             <p class="info__text">
               Чем раньше вы начнете делать шаги по изменению свой жизни, тем
-              быстрее и дольше она будет дарить Вам радость и удовольствие!
+              быстрее и дольше она будет дарить вам радость и удовольствие!
             </p>
           </div>
           <div class="info__video-img">
             <iframe
               class="info__video"
-              src="https://www.youtube.com/embed/X2Pf_O2dHFs?controls=0"
+              src="https://www.youtube.com/embed/FBQHdko5jsc?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
-            >
-            </iframe>
+            ></iframe>
             <iframe
               class="info__video"
-              src="https://www.youtube.com/embed/TXW0nTA8Lzg?controls=0"
+              src="https://www.youtube.com/embed/lljeSXNnGkU?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -112,21 +121,24 @@
             ></iframe>
           </div>
           <div class="info__container-post">
-            <img
-              src="./images/Instagram__post1.png"
-              alt="Счастливые» семьи"
-              class="info__post"
-            />
-            <img
-              src="./images/Instagram__post2.png"
-              alt="Родительские манипуляции"
-              class="info__post"
-            />
-            <img
-              src="./images/Instagram__post3.png"
-              alt="Выход из созависимости"
-              class="info__post"
-            />
+            <a href="https://www.instagram.com/p/CaZEjFLMyyR/" target="_blank">
+              <img
+                src="./images/Instagram__post1.png"
+                alt="Счастливые» семьи"
+                class="info__post"
+            /></a>
+            <a href="https://www.instagram.com/p/CUaRsaFsBGN/" target="_blank">
+              <img
+                src="./images/Instagram__post2.png"
+                alt="Родительские манипуляции"
+                class="info__post"
+            /></a>
+            <a href="https://www.instagram.com/p/CTG8aulMo27/" target="_blank">
+              <img
+                src="./images/Instagram__post3.png"
+                alt="Выход из созависимости"
+                class="info__post"
+            /></a>
           </div>
           <nav class="info__nav">
             <a
@@ -164,7 +176,7 @@
               Апатия, тревожность, депрессивные состояния
             </h3>
             <p class="situations__subtitle">
-              Найти и устранить причины, исцелиться, пройти психологическую
+              Найти и устранить симптомы, исцелиться, пройти психологическую
               реабилитацию
             </p>
             <img
@@ -189,7 +201,8 @@
           <div class="situations__item">
             <h3 class="situations__title">Семейная психология</h3>
             <p class="situations__subtitle">
-              Созависимость, семейные кризисы, угасание чувств
+              Созависимость, супружеская жизнь и семейные кризисы,
+              психологические проблемы семьи, угасание чувств
             </p>
             <img
               src="./images/situations_3.png"
@@ -200,8 +213,8 @@
           <div class="situations__item">
             <h3 class="situations__title">Выстраивание отношений с детьми</h3>
             <p class="situations__subtitle">
-              Понимание истоков поведения детей. Налаживание отношений с детьми
-              в семье
+              Понимание истоков психологии развития и поведения детей.
+              Налаживание отношений с детьми и подростками в семье
             </p>
             <img
               src="./images/situations_4.png"
@@ -212,8 +225,8 @@
           <div class="situations__item">
             <h3 class="situations__title">Самооценка, уверенность</h3>
             <p class="situations__subtitle">
-              Начать творить свою жизнь, выстраивание карьеры и самореализации.
-              Полюбить себя. Жить в удовольствие
+              Начать выстраивать новою жизнь, карьеру, повысить самооценку и
+              приступить к самореализации. Почуствовать, что жизнь прекрасна
             </p>
             <img
               src="./images/situations_5.png"
@@ -224,8 +237,8 @@
           <div class="situations__item">
             <h3 class="situations__title">Страхи, панические атаки</h3>
             <p class="situations__subtitle">
-              Найти источник и причину, перестать бояться и начать двигаться
-              вперед
+              Найти источник и причины страхов и фобий, перестать бояться и
+              начать двигаться вперед
             </p>
             <img
               src="./images/situations_6.png"
@@ -249,9 +262,9 @@
           </p>
           <ul class="consultation__text-list">
             <li>
-              Можно получить консультацию, не поднимаясь со своего стула. Это
-              особенно важно для людей с ограниченной подвижностью, или мам с
-              грудными малышами.
+              Можно получить консультацию психолога, не поднимаясь со своего
+              стула. Это особенно важно для людей с ограниченной подвижностью,
+              или мам с грудными малышами.
             </li>
             <li>
               Можно получить консультацию психолога, даже находясь за тысячи
@@ -287,7 +300,9 @@
               <p>ИНДИВИДУАЛЬНАЯ КОНСУЛЬТАЦИЯ ПО ВОПРОСАМ ДЕТСТКОЙ ПСИХОЛОГИИ</p>
             </div>
             <div class="consultation__table-item">
-              <p>ТЕСТИРОВАНИЕ И ПСИХОДИАГНОСТИКА ВЗРОСЛЫХ И ПОДРОСТКОВ</p>
+              <p>
+                ПСИХОЛОГИЧЕСКОЕ ТЕСТИРОВАНИЕ И ДИАГНОСТИКА ВЗРОСЛЫХ И ПОДРОСТКОВ
+              </p>
             </div>
             <div class="consultation__table-item">
               <p>
@@ -306,14 +321,14 @@
             <a
               href="https://drive.google.com/file/d/1Kvx_rWz3zuhtiIELxSmK3nuHCIfUFWKR/view?usp=sharing"
               target="_blank"
-              class="consultation__link"
-              >Цена</a
+              class="consultation__link consultation__link_margin"
+              >Прайс на услуги</a
             >
             <a
               href="https://drive.google.com/file/d/13lszZPTBPFoB2EkpnHZfFwEW4uBrvKVI/view?usp=sharing"
               target="_blank"
               class="consultation__link"
-              >Контракт</a
+              >Контракт Психолога и Клиента</a
             >
           </div>
         </section>
@@ -660,13 +675,16 @@
           </nav>
         </div>
         <p class="footer__copyright">
-          &copy; 2022
+          &copy; 2022 сайт сделан by_
           <a
             class="footer__copyright-link"
             href="https://t.me/kudnik"
             target="_blank"
-            >Кудеников Никита</a
-          >
+            ><img
+              src="./images/Kudenikov2.jpg"
+              alt="Логотип создателя сайта"
+              class="footer__copyright-img"
+          /></a>
         </p>
       </footer>
     </div>
