--- a/src/index.html
+++ b/src/index.html
@@ -11,51 +11,52 @@
   <body class="page">
     <div class="page__container">
       <header class="header" id="header">
-        <img class="header__img" src="./images/forHeader2.jpg" alt="Обложка" />
-        <div class="header__container">
-          <section class="top-nav">
-            <input id="menu-toggle" type="checkbox" />
-            <label class="menu-button-container" for="menu-toggle">
-              <div class="menu-button"></div>
-            </label>
-            <ul class="menu header__nav">
-              <li>
-                <a class="nav__link header__link" href="#header"
-                  >Главная <br />
-                  страница</a
-                >
-              </li>
-              <li>
-                <a class="nav__link header__link" href="#info"
-                  >Работа<br />
-                  психолога</a
-                >
-              </li>
-              <li>
-                <a class="nav__link header__link" href="#situations"
-                  >Психологическая<br />
-                  помощь</a
-                >
-              </li>
-              <li>
-                <a class="nav__link header__link" href="#consultation"
-                  >Психологические<br />
-                  консультации</a
-                >
-              </li>
-              <li>
-                <a class="nav__link header__link" href="#footer"
-                  >Мои<br />
-                  контакты</a
-                >
-              </li>
-            </ul>
-          </section>
-          <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
-            >Записаться на консультацию
-          </a>
-          <h1 class="header__title">Психолог Ирина Дан</h1>
-          <p class="header__subtitle">Помогаю изменить жизнь к лучшему</p>
+        <div class="header__img">
+          <div class="header__container">
+            <section class="top-nav">
+              <input id="menu-toggle" type="checkbox" />
+              <label class="menu-button-container" for="menu-toggle">
+                <div class="menu-button"></div>
+              </label>
+              <ul class="menu header__nav">
+                <li>
+                  <a class="nav__link header__link" href="#header"
+                    >Главная <br />
+                    страница</a
+                  >
+                </li>
+                <li>
+                  <a class="nav__link header__link" href="#info"
+                    >Работа<br />
+                    психолога</a
+                  >
+                </li>
+                <li>
+                  <a class="nav__link header__link" href="#situations"
+                    >Психологическая<br />
+                    помощь</a
+                  >
+                </li>
+                <li>
+                  <a class="nav__link header__link" href="#consultation"
+                    >Психологические<br />
+                    консультации</a
+                  >
+                </li>
+                <li>
+                  <a class="nav__link header__link" href="#footer"
+                    >Мои<br />
+                    контакты</a
+                  >
+                </li>
+              </ul>
+            </section>
+            <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
+              >Записаться на консультацию
+            </a>
+            <h1 class="header__title">Психолог Ирина Дан</h1>
+            <p class="header__subtitle">Помогаю изменить жизнь к лучшему</p>
+          </div>
         </div>
       </header>
       <main>
