--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Nikita Kudenikov" />
     <title>Психолог Ирина Дан</title>
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <div class="page__container">
@@ -28,6 +29,12 @@
                   <a class="nav__link header__link" href="#info"
                     >Работа<br />
                     психолога</a
+                  >
+                </li>
+                <li>
+                  <a class="nav__link header__link" href="./education.html"
+                    >Сведения об<br />
+                    образовании</a
                   >
                 </li>
                 <li>
@@ -415,5 +422,6 @@
         </p>
       </footer>
     </div>
+    <script src="./pages/index.js"></script>
   </body>
 </html>
