--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Nikita Kudenikov" />
     <title>Психолог Ирина Дан</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <div class="page__container">
@@ -33,8 +32,8 @@
                 </li>
                 <li>
                   <a class="nav__link header__link" href="./education.html"
-                    >Сведения об<br />
-                    образовании</a
+                    >Образование и<br />
+                    квалификация</a
                   >
                 </li>
                 <li>
@@ -380,33 +379,47 @@
             target="_blank"
             >Записаться на консультацию</a
           >
-          <nav class="footer__nav">
+          <div class="footer__nav">
             <h3 class="footer__title">Социальные сети</h3>
-            <a
-              class="footer__icon"
-              href="https://www.instagram.com/irdan_psy/"
-              target="_blank"
-              ><img src="./images/Instagram_32px.png" alt="Instagram"
-            /></a>
-            <a
-              class="footer__icon"
-              href="https://www.facebook.com/psy.academician/"
-              target="_blank"
-              ><img src="./images/facebook_32px.png" alt="Facebook"
-            /></a>
-            <a
-              class="footer__icon"
-              href="https://vt.tiktok.com/ZSdyPUQHV/"
-              target="_blank"
-              ><img src="./images/tikTok_32px.png" alt="Tik-Tok"
-            /></a>
-            <a
-              class="footer__icon"
-              href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
-              target="_blank"
-              ><img src="./images/YouTube_32px.png" alt="YouTube"
-            /></a>
-          </nav>
+            <nav class="footer__container-icon">
+              <a
+                class="footer__icon"
+                href="https://www.instagram.com/irdan_psy/"
+                target="_blank"
+                ><img src="./images/Instagram_32px.png" alt="Instagram"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://www.linkedin.com/in/irdan-psy/"
+                target="_blank"
+                ><img src="./images/linkedin_32px.png" alt="Linkedin"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://www.facebook.com/psy.academician/"
+                target="_blank"
+                ><img src="./images/facebook_32px.png" alt="Facebook"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://vt.tiktok.com/ZSdyPUQHV/"
+                target="_blank"
+                ><img src="./images/tikTok_32px.png" alt="Tik-Tok"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
+                target="_blank"
+                ><img src="./images/YouTube_32px.png" alt="YouTube"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://www.b17.ru/psy_academician/"
+                target="_blank"
+                ><img src="./images/b17_32px.png" alt="b17"
+              /></a>
+            </nav>
+          </div>
         </div>
         <p class="footer__copyright">
           &copy; 2022 сайт сделан by_
@@ -422,6 +435,5 @@
         </p>
       </footer>
     </div>
-    <script src="./pages/index.js"></script>
   </body>
 </html>
